# playwright-qa-tests

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml
chromium/api/: index.html
chromium/cart/: index.html
chromium/product_details/: index.html
chromium/shopping_modal/: index.html
chromium/ui/: index.html
chromium/usertests/: index.html
components/: add_to_cart_modal.py  consent_popup.py
helper_functions_for_tests/: cart_tests_helpers.py
pages/: cart.py  delete_account_page.py  login_page.py  main_page.py  product_details_page.py
tests/: conftest.py
tests/ui/: test_cart.py
webkit/cart/: index.html
webkit/product_details/: index.html
webkit/shopping_modal/: index.html
webkit/ui/: index.html
webkit/usertests/: index.html
