[tool.poetry]
name = "playwright-qa-tests"
version = "0.1.0"
description = "QA automation tests with Playwright"
authors = ["Jacek Gwoździewicz"]

packages = [
    { include = "playwright_qa_tools", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^9.0.2"
pytest-playwright = "^0.7.2"
black = "^26.1.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
pytest-xdist = "^3.8.0"
pytest-html = "^4.2.0"
pre-commit = "^4.5.1"
python-dotenv = "^1.1.0"
requests = "^2.32.5"
faker = "^37.3.0"
commitizen = "^4.12.0"
pytest-rerunfailures = "^16.1"


[tool.poetry.scripts]
lints = "playwright_qa_tools.cli:lints"

[tool.pytest.ini_options]
markers = [
    "ui: UI ",
    "api: API ",
    "usertests:  usertests ",
    "product_details:  product_details ",
    "cart:  cart ",
    "shopping_modal:  shopping_modal "
]
addopts = "--color=yes --capture=tee-sys"
filterwarnings = "ignore:Unverified HTTPS request.*"


[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "playwright_qa_tools"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.0"
tag_format = "$version"
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "src/playwright_qa_tools/__init__.py:__version__",
    "CHANGELOG.md"
]
